--- a/languages/fr/ror.po
+++ b/languages/fr/ror.po
@@ -421,7 +421,7 @@ msgstr "Activer le frein à main"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:31
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "Bascule le contrôle de la traction"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
