--- a/languages/af/ror.po
+++ b/languages/af/ror.po
@@ -453,7 +453,7 @@ msgstr "skakel parkeering breek"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "skakel traksie beheer"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
