--- a/languages/id/ror.po
+++ b/languages/id/ror.po
@@ -448,7 +448,7 @@ msgstr ""
 #, fuzzy
 #| msgid "toggle cruise control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "aktifkan pengendalian jelajah"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
