--- a/languages/nl/ror.po
+++ b/languages/nl/ror.po
@@ -476,7 +476,7 @@ msgstr "Handrem"
 #| msgctxt "InputEvent"
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "verander tractiecontrole"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
