--- a/languages/ro/ror.po
+++ b/languages/ro/ror.po
@@ -477,7 +477,7 @@ msgstr "trage frâna de mână"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "activează controlul de tracțiune"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
