--- a/languages/fi/ror.po
+++ b/languages/fi/ror.po
@@ -475,7 +475,7 @@ msgstr "seisontajarru"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "Hallitse luistonestoa"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
