--- a/languages/de/ror.po
+++ b/languages/de/ror.po
@@ -489,7 +489,7 @@ msgstr "Parkbremse ein/-ausschalten"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "Traktionskontrolle ein-/ausschalten"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
