--- a/languages/ru/ror.po
+++ b/languages/ru/ror.po
@@ -484,7 +484,7 @@ msgstr "переключение стояночного тормоза"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "переключение тяги"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
