--- a/languages/lb/ror.po
+++ b/languages/lb/ror.po
@@ -415,7 +415,7 @@ msgstr "ABS un/ausschalten"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:31
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr ""
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
