--- a/languages/ko/ror.po
+++ b/languages/ko/ror.po
@@ -439,7 +439,7 @@ msgstr "toggle 트럭 탐지장치"
 #, fuzzy
 #| msgid "toggle truck beacons"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "toggle 트럭 탐지장치"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
