--- a/languages/sv/ror.po
+++ b/languages/sv/ror.po
@@ -476,7 +476,7 @@ msgstr "parkeringsbroms"
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "Växla tractionkontroll"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
