--- a/languages/sl/ror.po
+++ b/languages/sl/ror.po
@@ -416,7 +416,7 @@ msgstr ""
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:31
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr ""
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
