--- a/languages/eo/ror.po
+++ b/languages/eo/ror.po
@@ -441,7 +441,7 @@ msgstr "baskuligi parkbremson"
 #, fuzzy
 #| msgid "toggle truck beacons"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "baskuligi gvidmarkilojn de la kamiono"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
