--- a/languages/lt/ror.po
+++ b/languages/lt/ror.po
@@ -455,7 +455,7 @@ msgstr ""
 #, fuzzy
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "perjungti sukibimo kontrolę"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
