--- a/languages/cs/ror.po
+++ b/languages/cs/ror.po
@@ -493,7 +493,7 @@ msgstr "parkovací brzda"
 #| msgctxt "InputEvent"
 #| msgid "toggle traction control"
 msgctxt "AngelScript"
-msgid "Toggles the tracktion control"
+msgid "Toggles the traction control"
 msgstr "přepnout kontrolu trakce"
 
 #: gui/panels/GUI_AngelScriptExamples.cpp:32
